Add existing files

--- a/axioms/axioms.tex
+++ b/axioms/axioms.tex
@@ -200,4 +200,23 @@ then $\Pr(A') + \Pr(B')$ = \\
 \item $P(A \text{ or } B)$
 \item $P(\text{neither } A \text{ nor } B)$
 \end{enumerate}
+\item The probability distribution of a discrete random variable $X$ is given below. The value of $k$ is equal to:
+\begin{table}[htb]
+\centering
+\input{exemplar/12/13/3/87/tables/Book1.tex}
+\caption{}
+\label{tab:exemplar/12/13/3/87}
+\end{table}
+\begin{enumerate}
+\item 8
+\item 16
+\item 32
+\item 48
+\end{enumerate}
+\solution
+\input{exemplar/12/13/3/87/main.tex}
+\item State True or False for the given statement:
+Two independent events are always mutually exclusive.\\
+\solution 
+\input {exemplar/12/13/3/97/main.tex}
 \end{enumerate}
