--- a/exemplar/12/13/3/87/tables/Book1.tex
+++ b/exemplar/12/13/3/87/tables/Book1.tex
@@ -211,7 +211,7 @@
 \\
 \hhline{|-----|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{P\brak{X}}}
+	{\gnumericPB{\centering}\gnumbox{$p_X\brak{n}$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{$\frac{5}{k}$}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
