--- a/app/axioms.tex
+++ b/app/axioms.tex
@@ -33,7 +33,6 @@ A^{\prime}B^{\prime} &=  \brak{A+B}^{\prime}
 \end{align}
 	\end{enumerate}
 \item 
-	%Substituting \eqref{eq:axiom_sum_ABp} in \eqref{eq:axiom_sum_two}, 
 	\begin{align}
 \pr{A+B} &= \pr{A} + \pr{B} - \pr{AB} 
 \label{eq:axiom_sum_AB}
@@ -79,6 +78,30 @@ and
 \begin{align}
 	\pr{AB} = \pr{A}\pr{B}
 \label{eq:axiom-ind}
+\end{align}
+\item Let $A + B = 1, AB = 0$.  Then it is possible to define a real number $X$ such that 
+\begin{align}
+	X = 0 \implies A \text{ and } X = 1 \implies B
+	\\
+	\text{or, }
+	\pr{A} = \pr{X=0},
+	\pr{B} = \pr{X=1}
+\end{align}
+$X \in \cbrak{0,1}$ is then defined to be a {\em random variable} with the {\em distribution}
+\begin{align}
+	\label{eq:dist}
+	p_X(n) = 
+	\begin{cases}
+		\pr{A} & X=0,
+		\\
+		\pr{B} & X=1.
+\end{cases}
+\end{align}
+Using 
+	\eqref{eq:axiom-one},
+\begin{align}
+	\sum_n p_X(n) = 1.
+	\label{eq:dist-axiom-one}
 \end{align}
 \item 
 \begin{align}
