--- a/axioms/cond.tex
+++ b/axioms/cond.tex
@@ -29,39 +29,19 @@ $1$
 \end{enumerate}
 \solution
 \input{exemplar/12/13/3/7/main.tex}
-\item If $\pr{A} = \frac{3}{10}, \pr{B} = \frac{2}{5}$ and $\pr{A+B} = \frac{3}{5}$, then $\pr{\left. B \right| A} + \pr{\left. A \right| B} $ equals
+\item If $\pr{A} = \frac{3}{10}, \pr{B} = \frac{2}{5}$ and $\pr{A+B} = \frac{3}{5}$, then $\pr{ B | A} + \pr{ A | B} $ equals
 \begin{enumerate}
-	\item $\frac{1}{4}$ \vspace{2pt}
-	\item $\frac{1}{3}$ \vspace {2pt}
-	\item $\frac{5}{12}$ \vspace{2pt}
-	\item $\frac{7}{12}$ \vspace{2pt}
+\setlength{\itemsep}{1ex}
+	\item $\frac{1}{4}$ 
+	\item $\frac{1}{3}$ 
+	\item $\frac{5}{12}$
+	\item $\frac{7}{12}$
 \end{enumerate}
-%\input{exemplar/12/13/3/58/main.tex}
-\item The probability distribution of a discrete random variable X is given below. The value of k is equal to:
-\begin{table}[!ht]
-%\input{exemplar/12/13/3/87/tables/Book1.tex}
-\end{table}
-\begin{enumerate}[label=(\alph*)]
-\item 8
-\item 16
-\item 32
-\item 48
-\end{enumerate}
-%\input{exemplar/12/13/3/87/main.tex}
-\item state True or False for the given statement:
-Two independent events are always mutually exclusive.\\
-\solution \\
-%\input {exemplar/12/13/3/97/main.tex}
-\item If A and B are two events and A $\ne \phi$, B $\ne \phi$, then
+\solution
+\input{exemplar/12/13/3/58/main.tex}
+\item Let $A$ and $B$ be two  events such that $\pr{A} = \frac{3}{8}$, $\pr{B} = \frac{5}{8}$ and $\pr{A+B} = \frac{3}{4}$. Then $\pr{\left.{A}|\right.{B}}\pr{\left.{A^\prime} |\right.{B}}$ is equal to
 \begin{enumerate}
-	\item $\pr{A|B} = \pr{A}.\pr{B}$
-	\item $\pr{A|B} = \frac{\pr{A\cap B}}{\pr{B}}$
-	\item $\pr{A|B}.\pr{B|A} = 1$
-	\item $\pr{A|B} = \frac{\pr{A}}{\pr{B}}$
-\end{enumerate}
-%\input {exemplar/12/13/3/62/main.tex}
-\item Let $A$ and $B$ be two  events such that $\pr{A} = \frac{3}{8}$, $\pr{B} = \frac{5}{8}$ and $\pr{A+B} = \frac{3}{4}$. Then $\pr{\left.{A}|\right.{B}}.\pr{\left.{A^\prime} |\right.{B}}$ is equal to
-\begin{enumerate}[label=(\alph*)]
+\setlength{\itemsep}{1ex}
 \item $\frac{2}{5}$
 \vspace{3pt}
 \item $\frac{3}{8}$
@@ -70,7 +50,8 @@ Two independent events are always mutually exclusive.\\
 \vspace{3pt}
 \item $\frac{6}{25}$
 \end{enumerate}
-%\input{exemplar/12/13/3/71/main(2).tex}
+\solution
+\input{exemplar/12/13/3/71/main.tex}
 \item If $P(A)=0.4$, $P(B)=0.8$ and $P(B|A)=0.6$, then $P(A \cup B)$ is equal to
 \begin{enumerate}
 \item 0.24
@@ -79,7 +60,7 @@ Two independent events are always mutually exclusive.\\
 \item 0.96
 \end{enumerate}
 \solution
-%\input{exemplar/12/13/3/61/main.tex}
+\input{exemplar/12/13/3/61/main.tex}
 \item If A and B aret two events such that \pr{A} =$\frac{1}{2}$ \pr{B} =$\frac{1}{3}$, \pr{A|B}=$\frac{1}{4}$, Then \pr{A' B'} equals
 \begin{enumerate}
 	\item $\frac{1}{12}$
@@ -212,4 +193,11 @@ then $A$ is of $B$.\\
 \solution
 %\input{exemplar/12/13/3/8/main.tex}
 %
+\item If A and B are two events and A $\ne \phi$, B $\ne \phi$, then
+\begin{enumerate}
+	\item $\pr{A|B} = \pr{A}.\pr{B}$
+	\item $\pr{A|B} = \frac{\pr{A\cap B}}{\pr{B}}$
+	\item $\pr{A|B}\pr{B|A} = 1$
+	\item $\pr{A|B} = \frac{\pr{A}}{\pr{B}}$
+\end{enumerate}
 \end{enumerate}
