Add existing files

--- a/axioms/axioms.tex
+++ b/axioms/axioms.tex
@@ -219,4 +219,7 @@ then $\Pr(A') + \Pr(B')$ = \\
 Two independent events are always mutually exclusive.\\
 \solution 
 \input {exemplar/12/13/3/97/main.tex}
+\item If $A$ and $B^\prime$ are independent events, then $\pr{A^\prime+B}=1-\pr{A}\pr{B^\prime}$.\\
+\solution
+\input{exemplar/12/13/3/100/main.tex}
 \end{enumerate}
