--- a/axioms/cond.tex
+++ b/axioms/cond.tex
@@ -61,36 +61,36 @@ $1$
 \end{enumerate}
 \solution
 \input{exemplar/12/13/3/61/main.tex}
-\item If A and B aret two events such that \pr{A} =$\frac{1}{2}$ \pr{B} =$\frac{1}{3}$, \pr{A|B}=$\frac{1}{4}$, Then \pr{A' B'} equals
+\item If A and B are two events such that \pr{A} =$\frac{1}{2}$ \pr{B} =$\frac{1}{3}$, \pr{A|B}=$\frac{1}{4}$, then \pr{A' B'} equals
 \begin{enumerate}
+\setlength{\itemsep}{1ex}
 	\item $\frac{1}{12}$
 	\item $\frac{3}{4}$
 	\item $\frac{1}{4}$
 	\item $\frac{3}{16}$	
 \end{enumerate}
 \solution
-%\input{exemplar/12/13/3/60/main.tex}
+\input{exemplar/12/13/3/60/main.tex}
 \item If $A$ and $B$ are such events that $\pr{A} > 0$ and $\pr{B}\neq 1$, then $\pr{A^\prime|B^\prime}$ is
 \begin{enumerate}
+\setlength{\itemsep}{1ex}
 \item $1-\pr{A|B}$
 \item $1-\pr{A^\prime|B}$
 \item $\frac{1-\pr{A+B}}{\pr{B^\prime}}$
 \item $\frac{\pr{A^\prime}}{\pr{B^\prime}}$
 \end{enumerate}
-%\input{exemplar/12/13/3/68/main.tex}
+\solution
+\input{exemplar/12/13/3/68/main.tex}
 \item  Two events $E$ and $F$ are independent. If $\pr{E} = 0.3$, $\pr{E+F} = 0.5$, then $\pr{E|F}-\pr{F|E}$ equals
 \begin{enumerate}
-    \item[(a)] $\frac{2}{7}$
-    \item[(b)] $\frac{3}{35}$
-    \item[(c)] $\frac{1}{70}$
-    \item[(d)] $\frac{1}{7}$
+\setlength{\itemsep}{1ex}
+    \item $\frac{2}{7}$
+    \item $\frac{3}{35}$
+    \item $\frac{1}{70}$
+    \item $\frac{1}{7}$
 \end{enumerate}
 \solution
-%\input{exemplar/12/13/3/73/main.tex}
-\item You are given that A and B are two events such that \pr{B}=$\frac{3}{5}$ \pr{A \ | \ B}=$\frac{1}{2}$ \pr{A+B}=$\frac{4}{5}$ and \pr{A}=$\frac{1}{2}$  \pr{B \ | \ A^\prime} is equal to\\
-%\input{exemplar/12/13/3/65/main.tex}
-\item If $A$ and $B^\prime$ are independent events, then $\pr{A^\prime+B}=1-\pr{A}\pr{B^\prime}$.\\
-%\input{exemplar/12/13/3/100/main.tex}
+\input{exemplar/12/13/3/73/main.tex}
 \item If A and B are two events such that $\pr{A|B}=p,\pr{A}=p,\pr{B}=\frac{1}{3}$ and $\pr{A+B}=\frac{5}{9}$,then $p=$\\
 \solution
 %\input{exemplar/12/13/3/104/main.tex}
@@ -200,4 +200,5 @@ then $A$ is of $B$.\\
 	\item $\pr{A|B}\pr{B|A} = 1$
 	\item $\pr{A|B} = \frac{\pr{A}}{\pr{B}}$
 \end{enumerate}
+\item You are given that A and B are two events such that \pr{B}=$\frac{3}{5}$ \pr{A  |  B}=$\frac{1}{2}$ \pr{A+B}=$\frac{4}{5}$ and \pr{A}=$\frac{1}{2}$.  \pr{B  |  A^\prime} is equal to
 \end{enumerate}
