--- a/main.tex
+++ b/main.tex
@@ -70,7 +70,7 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \section{Axioms}
 \subsection{Formulae}
 \input{app/axioms.tex}
-\subsection{Examples}
+\subsection{Boolean Logic}
 \input{axioms/axioms.tex}
 \subsection{Conditional Probability}
 \input{axioms/cond.tex}
