Add existing files

--- a/axioms/cond.tex
+++ b/axioms/cond.tex
@@ -104,12 +104,14 @@ $1$
 \item If 
 \begin{align}
 \pr{B} = \frac{3}{5},
-\pr{A|B} = \frac{1}{2} \text{and}
-\pr{A + B} = \frac{4}{5}, \text{then}
-\pr{A + B}^{\prime} + \pr{A^{\prime} + B}
+\pr{A|B} = \frac{1}{2} \text{ and}
+\pr{A + B} = \frac{4}{5}, 
+\\
+\text{then }
+\pr{A + B^{\prime}} + \pr{A^{\prime} + B} =?
 \end{align}
 \solution
-%\input{exemplar/12/13/3/66/main.tex}
+\input{exemplar/12/13/3/66/main.tex}
 \item Let $A$ and $B$ be two events. If 
 \begin{align}
 \pr{A|B} = \pr{A},
