Add existing files

--- a/app/axioms.tex
+++ b/app/axioms.tex
@@ -108,6 +108,14 @@ Using
 	\pr{A | B} = \frac{\pr{AB}}{\pr{B}}
 \label{eq:axiom-cond}
 \end{align}
+If $A$ and $B$ are independent, from 
+\eqref{eq:axiom-cond}
+and 
+\eqref{eq:axiom-ind},
+\begin{align}
+	\pr{A | B} = \frac{\pr{A}\pr{B}}{\pr{B}}={\pr{A}}
+\label{eq:axiom-cond-ind}
+\end{align}
 \item 
 \begin{align}
 	\pr{A' | B} = \frac{\pr{A'B}}{\pr{B}} = \frac{\pr{B}-\pr{AB}}{\pr{B}}
