--- a/axioms/cond.tex
+++ b/axioms/cond.tex
@@ -112,55 +112,36 @@ $1$
 \end{align}
 \solution
 \input{exemplar/12/13/3/66/main.tex}
-\item Let $A$ and $B$ be two events. If 
-\begin{align}
-\pr{A|B} = \pr{A},
-\end{align} 
-then $A$ is of $B$.\\
-\solution
-%\input{exemplar/12/13/3/108/main.tex}
 \item
-
  If \pr{A|B} $>$ \pr{A}, then which of the following is correct :
-
-\begin{enumerate}[label=(\Alph*)]
-
+\begin{enumerate}
  \item  
  \label{12.13.6.18.A}
- \pr{B|A} $<$ \pr{B}\\
+$ \pr{B|A} < \pr{B}$\\
  \item 
   \label{12.13.6.18.B}
- \pr{AB} $<$ \pr{A}\pr{B}\\
+ $\pr{AB}< \pr{A}\pr{B}$\\
  \item 
  \label{12.13.6.18.C}
- \pr{B|A} $>$ \pr{B}\\
+ $\pr{B|A} > \pr{B}$\\
  \item 
   \label{12.13.6.18.D}
- \pr{B|A} = \pr{B}\\
-
+ $\pr{B|A} = \pr{B}$\\
  \end{enumerate}
-%\input{ncert/12/13/6/18/main1.tex}
-\item Let  and B be independent events with \pr{A} = 0.3 and \pr{B} = 0.4. Find 
+\solution 
+\input{ncert/12/13/6/18/main1.tex}
+\item Let  $A$ and $B$ be independent events with $\pr{A} = 0.3$ and $\pr{B} = 0.4$. Find 
 \begin{enumerate}
 \item \pr{AB} \item \pr{A+B}
 
 \item \pr{A|B} \item \pr{B|A}
 \end{enumerate}
 \solution
-%\input{ncert/12/13/2/8/main.tex}
-\item Compute \pr{A|B} , if \pr{B} = 0.5 and \pr{AB} = 0.32.\\
+\input{ncert/12/13/2/8/main.tex}
+\item Compute $\pr{A|B}$, if $\pr{B} = 0.5$ and $\pr{AB} = 0.32$.\\
 	\solution
-	%\input{ncert/12/13/1/2/main.tex}
+	\input{ncert/12/13/1/2/main.tex}
 	%
-\item A fair die is rolled. Consider events $E=1,3,5,\, F=2,3$ and $G=2,3,4,5$. Find
-\begin{enumerate}
-\item $\pr{E \mid F} \text{ and } \pr{F \mid E}$
-\item $\pr{E \mid G} \text{ and } \pr{G \mid E}$
-\item $\pr{{E \cup F} \mid G} \text{ and } \pr{{E \cap F} \mid G}$
-\end{enumerate}
-%
-\solution
-%\input{ncert/12/13/1/11/main.tex}
 	\item If A and B are two events such that $P(A) \neq 0$ and $P\brak{B\mid A} = 1$, then
 \begin{enumerate}
 \item $A \subset B$\\
@@ -169,32 +150,13 @@ then $A$ is of $B$.\\
 \item $A = \phi$\\
 \end{enumerate}
 		\solution
-		%\input{ncert/12/13/6/17/main.tex}
-	\item If \pr {A \mid B} $>$ \pr{A}, then which of the following is correct 
-\begin{enumerate}
- \item \pr{B\mid A} $<$ \pr{(B)} \\
- \item \pr{AB} $<$ \pr{A}  \pr{B}  \\
- \item \pr{B\mid A} $>$ \pr{B} \label{eq:ncert/12/13/6/18/c}\\ 
- \item \pr{B\mid A} $=$ \pr{B} \\
-\end{enumerate}
-		\solution
-		%\input{ncert/12/13/6/18/main.tex}
+		\input{ncert/12/13/6/17/main.tex}
 \item You are given that A and B are two events such that $\pr{B}=\frac{3}{5},\pr{A|B}=\frac{1}{2}$ and $\pr{A+B}=\frac{4}{5}$,then $\pr{A}$ equals\\
 \solution
-%\input{exemplar/12/13/3/64/main.tex}
-	\item If $A$ and $B$ are any two events such that \pr{A}+\pr{B}-\pr{AB}=\pr{A}, then choose the correct option
-\begin{enumerate}
-\item  $\pr{B|A}=1$
-\item $\pr{A|B}=1$
-	\label{prob:12/13/6/19}
-\item $\pr{B|A}=0$
-\item $\pr{A|B}=0$
-\end{enumerate}
-		\solution
-		%\input{ncert/12/13/6/19/main.tex}
+\input{exemplar/12/13/3/64/main.tex}
 \item Three events A, B and C have probabilities $\frac{2}{5}$,$\frac{1}{3}$ and $\frac{1}{2}$ respetively.Given that $\pr{AC}=\frac{1}{5}$ and $\pr{BC}=\frac{1}{4}$,find the values of $\pr{C | B}$ and $\pr{A^{\prime} C^{\prime}}$\\
 \solution
-%\input{exemplar/12/13/3/8/main.tex}
+\input{exemplar/12/13/3/8/main.tex}
 %
 \item If A and B are two events and A $\ne \phi$, B $\ne \phi$, then
 \begin{enumerate}
