--- a/word/cond.tex
+++ b/word/cond.tex
@@ -54,4 +54,13 @@ The probability that a person visiting a zoo will see the giraffe is 0.72, the p
 \brak{ii}  E : no tail appears,\qquad\qquad\qquad F : no head appears
 Determine \pr{E\mid F}.
 %\input{ncert/12/13/1/7a/ncertmain.tex}
+\item A fair die is rolled. Consider events $E=1,3,5,\, F=2,3$ and $G=2,3,4,5$. Find
+\begin{enumerate}
+\item $\pr{E \mid F} \text{ and } \pr{F \mid E}$
+\item $\pr{E \mid G} \text{ and } \pr{G \mid E}$
+\item $\pr{{E \cup F} \mid G} \text{ and } \pr{{E \cap F} \mid G}$
+\end{enumerate}
+%
+\solution
+%\input{ncert/12/13/1/11/main.tex}
 \end{enumerate}
