Add existing files

--- a/axioms/cond.tex
+++ b/axioms/cond.tex
@@ -160,6 +160,7 @@ $ \pr{B|A} < \pr{B}$\\
 %
 \item If A and B are two events and A $\ne \phi$, B $\ne \phi$, then
 \begin{enumerate}
+\setlength{\itemsep}{1ex}
 	\item $\pr{A|B} = \pr{A}.\pr{B}$
 	\item $\pr{A|B} = \frac{\pr{A\cap B}}{\pr{B}}$
 	\item $\pr{A|B}\pr{B|A} = 1$
