--- a/word/cond.tex
+++ b/word/cond.tex
@@ -1,4 +1,34 @@
 \begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
+	\item An electronic assembley consists of two subsystems,say A and B.From previous testing procedures, the following probabilities are assumed to be known
+\begin{align}
+\pr{\text{A fails}}&=0.20
+\\ \pr{\text{B alone fails}}&=0.15
+\\ \pr{\text{A  and B fails}}&=0.15
+\end{align}
+ Evaluate the following probabilities
+ \begin{enumerate}
+ \item $\pr{\text{A fails given B has failed}}$
+ \item $\pr{\text{A fails alone}}$
+\end{enumerate}
+		\solution
+		\input{ncert/12/13/6/15/main.tex}
+  \item
+  In a hostel, 60\% of the students read Hindi newspaper, 40\% read English
+newspaper and 20\% read both Hindi and English newspapers. A student is
+selected at random.
+\begin{enumerate}
+\item Find the probability that she reads neither Hindi nor English newspapers.
+\item If she reads Hindi newspaper, find the probability that she reads English
+newspaper.
+\item If she reads English newspaper, find the probability that she reads Hindi
+newspaper.
+\end{enumerate}
+\solution
+\input{ncert/12/13/2/16/main.tex}
+	\item Assume that the chances of a patient having a heart attack is $40\%$. It is also assumed that a meditation and yoga course reduce the risk of heart attack by $30\%$ and prescription of certain drug reduces its chances by $25\%$. At a time a patient can choose any one of the two options with equal probabilities. It is given that after going through one of the two options the patient selected at random suffers a heart attack. Find the probability that the patient followed a course of meditation and yoga?
+	\\
+		\solution
+		\input{ncert/12/13/6/13/main.tex}
 	\item A team of medical students doing their internship have to assist during surgeries
 at a city hospital. The probabilities of surgeries rated as very-complex, complex,
 routine, simple or very-simple are respectively, 0.15, 0.20, 0.31, 0.26, .08. Find
