Add existing files

--- a/app/axioms.tex
+++ b/app/axioms.tex
@@ -121,4 +121,9 @@ and
 	\pr{A' | B} = \frac{\pr{A'B}}{\pr{B}} = \frac{\pr{B}-\pr{AB}}{\pr{B}}
 \label{eq:axiom-cond-prime}
 \end{align}
+\item Bayes' Theorem
+\begin{align}
+	\pr{E_1|A} &= \frac{\pr{E_1}\pr{A|E_1}}{\sum_{i=1}^{2}\pr{E_i}\pr{A|E_i}}
+\label{eq:axiom-bayes}
+\end{align}
 \end{enumerate}
