--- a/axioms/boolean/axioms.tex
+++ b/axioms/boolean/axioms.tex
@@ -222,4 +222,13 @@ Two independent events are always mutually exclusive.\\
 \item If $A$ and $B^\prime$ are independent events, then $\pr{A^\prime+B}=1-\pr{A}\pr{B^\prime}$.\\
 \solution
 \input{exemplar/12/13/3/100/main.tex}
+\item Let $E_1$ and $E_2$ be two independent events such that $\pr{E_1} = p_1 $ and $ \pr{E_2} = p_2 $  Describe in words the events whose probabilities are
+\begin{enumerate}
+\item \ $p_1 p_2$
+\quad\item \ $(1 - p_1) p_2 $
+\quad\item \ $1 - (1 - p_1)(1 - p_2)$
+\quad\item \ $p_1 + p_2 - 2p_1 p_2$
+\end{enumerate}
+\solution
+\input{exemplar/12/13/3/9/main.tex}
 \end{enumerate}
