--- a/axioms/boolean/rand.tex
+++ b/axioms/boolean/rand.tex
@@ -1,4 +1,7 @@
 \begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
+\item State whether the statement is True or False. The probabilities that a typist will make 0, 1, 2, 3, 4, 5 or more mistakes in typing a report are, respectively, 0.12, 0.25, 0.36, 0.14, 0.08, 0.11.\\
+\solution
+\input{exemplar/11/16/3/32/main.tex}
 \item State which of the following are not the probability distributions of a random
 variable. Give reasons for your answer.
 \begin{multicols}{2}  %
