--- a/exemplar/11/16/3/8/tables/table.tex
+++ b/exemplar/11/16/3/8/tables/table.tex
@@ -189,7 +189,7 @@
 
 \hhline{|-|-|-}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{\textbf{Random Variables}}}
+	{\gnumericPB{\centering}\gnumbox{\textbf{Variable}}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{\textbf{Difficulty Levels}}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
