--- a/axioms/word/axioms.tex
+++ b/axioms/word/axioms.tex
@@ -1,6 +1,17 @@
 \begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
-%\begin{enumerate}[resume*]
+		%
+\item If $A$ and $B$ are two candidates seeking admission in an engineering College. The probability that $A$ is selected is 0.5 and the probability that both $A$ and $B$ are selected is atmost 0.3. Is it possible that the probability of $B$ getting selected is 0.7?\\
+\solution 
+\input{exemplar/11/16/3/33/main.tex}
+\item State whether the statement is True or False.\\
+The probability that a person visiting a zoo will see the giraffe is 0.72, the probability that he will see the bears is 0.84 and the probability that he will see both is 0.52.\\
+\solution
+\input{exemplar/11/16/3/30/main.tex}
 %
+\item Suppose an integer from 1 through 1000 is chosen at random, find the probability that the integer is a multiple of 2 or a multiple of 9.
+\\
+\solution
+\input{exemplar/11/16/3/3/main.tex}
 \item If the probabilities for A to fail in an examination is 0.2 and that for B is 0.3, then
 the probability that either A or B fails is
 \begin{enumerate}
@@ -54,4 +65,16 @@ $F$ : 'the card drawn is a queen or jack’
 \end{enumerate}
 \solution
 \input{ncert/12/13/2/15/main.tex}
+	\item A team of medical students doing their internship have to assist during surgeries
+at a city hospital. The probabilities of surgeries rated as very-complex, complex,
+routine, simple or very-simple are respectively, 0.15, 0.20, 0.31, 0.26, .08. Find
+the probabilities that a particular surgery will be rated
+\begin{enumerate}
+\item complex or very-complex
+\item neither very-complex nor very simple
+\item routine or complex
+\item routine or simple
+\end{enumerate}
+		\solution
+		\input{exemplar/11/16/3/8/main.tex}
 \end{enumerate}
