--- a/axioms/word/cond.tex
+++ b/axioms/word/cond.tex
@@ -1,4 +1,53 @@
+\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
+	\item An electronic assembly consists of two subsystems,say A and B. From previous testing procedures, the following probabilities are assumed to be known
+\begin{align}
+\pr{\text{A fails}}&=0.20
+\\ \pr{\text{B alone fails}}&=0.15
+\\ \pr{\text{A  and B fails}}&=0.15
+\end{align}
+ Evaluate the following probabilities
+ \begin{enumerate}
+ \item $\pr{\text{A fails given B has failed}}$
+ \item $\pr{\text{A fails alone}}$
+\end{enumerate}
+		\solution
+		\input{ncert/12/13/6/15/main.tex}
+  \item
+  In a hostel, 60\% of the students read Hindi newspaper, 40\% read English
+newspaper and 20\% read both Hindi and English newspapers. A student is
+selected at random.
 \begin{enumerate}
+\item Find the probability that she reads neither Hindi nor English newspapers.
+\item If she reads Hindi newspaper, find the probability that she reads English
+newspaper.
+\item If she reads English newspaper, find the probability that she reads Hindi
+newspaper.
+\end{enumerate}
+\solution
+\input{ncert/12/13/2/16/main.tex}
+	\item Assume that the chances of a patient having a heart attack is $40\%$. It is also assumed that a meditation and yoga course reduce the risk of heart attack by $30\%$ and prescription of certain drug reduces its chances by $25\%$. At a time a patient can choose any one of the two options with equal probabilities. It is given that after going through one of the two options the patient selected at random suffers a heart attack. Find the probability that the patient followed a course of meditation and yoga?
+	\\
+		\solution
+		\input{ncert/12/13/6/13/main.tex}
+\item Suppose that 6\% of the people with blood group O are left handed and 10\% of those with other blood groups are left handed. 30\% of the people have blood group O. If a left handed person is selected at random, what is the probability that he/she will have blood group O?
+\\
+\solution 
+\input{exemplar/12/13/3/33/main.tex}
+\item \input{exemplar/11/16/3/43/main.tex}
+\item Two Coins are tossed once, where\\
+\brak{i} E : Tail appears on one coin,\qquad F : one coin shows head\\
+\brak{ii}  E : no tail appears,\qquad\qquad\qquad F : no head appears
+Determine \pr{E\mid F}.
+%\input{ncert/12/13/1/7a/ncertmain.tex}
+\item A fair die is rolled. Consider events $E=1,3,5,\, F=2,3$ and $G=2,3,4,5$. Find
+\begin{enumerate}
+\item $\pr{E \mid F} \text{ and } \pr{F \mid E}$
+\item $\pr{E \mid G} \text{ and } \pr{G \mid E}$
+\item $\pr{{E \cup F} \mid G} \text{ and } \pr{{E \cap F} \mid G}$
+\end{enumerate}
+%
+\solution
+%\input{ncert/12/13/1/11/main.tex}
 \item A child's game has 8 triangles of which 3 are blue and rest are red, and 10 squares of which 6 are blue and rest are red. One piece is lost at random. Find the probability that it is a
 \begin{enumerate}
 \item triangle 
