--- a/main.tex
+++ b/main.tex
@@ -67,36 +67,27 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 %\renewcommand{\thefigure}{\theenumi}
 \renewcommand{\thetable}{\theenumi}
 
-
 \section{Axioms}
 \subsection{Formulae}
 \input{app/axioms.tex}
 \subsection{Definitions}
-\input{axioms/defs.tex}
+\input{axioms/boolean/defs.tex}
 \subsection{Boolean Logic}
-\input{axioms/axioms.tex}
+\input{axioms/boolean/axioms.tex}
 \subsection{Applications}
-\input{word/axioms.tex}
+\input{axioms/word/axioms.tex}
 \subsection{Conditional Probability}
-\input{axioms/cond.tex}
+\input{axioms/boolean/cond.tex}
 \subsection{Applications}
-\input{word/cond.tex}
+\input{axioms/word/cond.tex}
 \subsection{Random Variables}
-\input{axioms/rand.tex}
-\iffalse
-\subsection{Applications}
-\input{exemplar/cond/word.tex}
-\fi
+\input{axioms/boolean/rand.tex}
 \section{Random Variables}
 \subsection{Examples}
-\input{ncert/defs.tex}
-\subsection{Exercises}
-\input{exemplar/defs.tex}
+\input{randm/defs.tex}
 \section{Conditional Probability}
 \subsection{Examples}
 \input{ncert/cond.tex}
-\subsection{Exercises}
-\input{exemplar/cond/cond.tex}
 %\section{Discrete Distributions}
 \section{Bernoulli}
 \input{ncert/bernoulli.tex}
