--- a/ncert/12/13/6/13/tables/table1.tex
+++ b/ncert/12/13/6/13/tables/table1.tex
@@ -3,8 +3,9 @@
 %%  This is a LaTeX2e table fragment exported from Gnumeric.        %%
 %%                                                                  %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{tabular}{|l|l|l|}\hline
-A:	&Person with heat attack	&\pr{A}=0.40\\\hline
-$E_1$:	&Person treated with meditation and yoga	&\pr{E_1}=0.50\\\hline
-$E_2$:	&Person treated with drug	&\pr{E_2}=0.50\\\hline
+\begin{tabular}{|c|l|l|}\hline
+	\textbf{Variable}&\textbf{Description}&\textbf{Probability}\\\hline
+A	&Person with heat attack	&\pr{A}=0.40\\\hline
+$E_1$	&Person treated with meditation and yoga	&\pr{E_1}=0.50\\\hline
+$E_2$	&Person treated with drug	&\pr{E_2}=0.50\\\hline
 \end{tabular}
