Add existing files

--- a/axioms/boolean/axioms.tex
+++ b/axioms/boolean/axioms.tex
@@ -1,11 +1,14 @@
 \begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
 	\item Which of the following cannot be the probability of an event ? 
+
+		\begin{multicols}{4}
 \begin{enumerate}
 \item $\frac{2}{3}$ 
 \item $-1.5$ 
 \item $15\%$ 
 \item $0.7$ 
 \end{enumerate}
+\end{multicols}
 \solution
 \input{ncert/10/15/1/4/main.tex}
 \item If P(E) = 0.05, what is the probability of ‘not E’?\\
