Add existing files

--- a/axioms/word/cond.tex
+++ b/axioms/word/cond.tex
@@ -33,7 +33,15 @@ newspaper.
 \\
 \solution 
 \input{exemplar/12/13/3/33/main.tex}
-\item \input{exemplar/11/16/3/43/main.tex}
+\item 
+Match the following
+\begin{table}[!h]
+	\input{exemplar/11/16/3/43/tables/table.tex}
+	\caption{}
+	\label{tab:exemplar/11/16/3/43/tab}	
+\end{table}
+\solution
+\input{exemplar/11/16/3/43/main.tex}
 \item Two Coins are tossed once, where\\
 \brak{i} E : Tail appears on one coin,\qquad F : one coin shows head\\
 \brak{ii}  E : no tail appears,\qquad\qquad\qquad F : no head appears
