--- a/axioms/boolean/cond.tex
+++ b/axioms/boolean/cond.tex
@@ -1,17 +1,18 @@
 \begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
 \item Let $\pr{A} = \frac{7}{13}$, $\pr{B} = \frac{9}{13}$, $\pr{AB} = \frac{4}{13}$. Then $\pr{A^{\prime}|B}$ is equal to
+\begin{multicols}{4}
 \begin{enumerate}
-\setlength{\itemsep}{1ex}
 \item $\frac{6}{13}$
 \item $\frac{4}{13}$
 \item $\frac{4}{9}$
 \item $\frac{5}{9}$
 \end{enumerate}
+\end{multicols}
 \solution
 \input{exemplar/12/13/3/67/main.tex}
 \item If $\pr{A}$ = $\frac{2}{5}, \pr{B} = \frac{3}{10}$ and $\pr{AB} = \frac{1}{5}$, then $\pr{A^{\prime}|B^{\prime}}\pr{B^{\prime}|A^{\prime}}$ is equal to 
+\begin{multicols}{4}
 \begin{enumerate}
-\setlength{\itemsep}{1ex}
 \item 
 $\frac{5}{6}$
 \item 
@@ -21,27 +22,31 @@ $\frac{25}{42}$
 \item 
 $1$
 \end{enumerate}
+\end{multicols}
 \solution
 \input{exemplar/12/13/3/59/prob5.tex}
 \item $A$ and $B$ are two events such that $\pr{A}= \frac{1}{2}$ , $\pr{B}= \frac{1}{3}$ and $\pr{AB}= \frac{1}{4}$. Find
+\begin{multicols}{4}
 \begin{enumerate}
 \item $\pr{A|B}$  \item $\pr{B|A}$  \item $\pr{A^{\prime}|B}$  \item $\pr{A^{\prime}|B^{\prime}}$
 \end{enumerate}
+\end{multicols}
 \solution
 \input{exemplar/12/13/3/7/main.tex}
 \item If $\pr{A} = \frac{3}{10}, \pr{B} = \frac{2}{5}$ and $\pr{A+B} = \frac{3}{5}$, then $\pr{ B | A} + \pr{ A | B} $ equals
+\begin{multicols}{4}
 \begin{enumerate}
-\setlength{\itemsep}{1ex}
 	\item $\frac{1}{4}$ 
 	\item $\frac{1}{3}$ 
 	\item $\frac{5}{12}$
 	\item $\frac{7}{12}$
 \end{enumerate}
+\end{multicols}
 \solution
 \input{exemplar/12/13/3/58/main.tex}
 \item Let $A$ and $B$ be two  events such that $\pr{A} = \frac{3}{8}$, $\pr{B} = \frac{5}{8}$ and $\pr{A+B} = \frac{3}{4}$. Then $\pr{\left.{A}|\right.{B}}\pr{\left.{A^\prime} |\right.{B}}$ is equal to
+\begin{multicols}{4}
 \begin{enumerate}
-\setlength{\itemsep}{1ex}
 \item $\frac{2}{5}$
 \vspace{3pt}
 \item $\frac{3}{8}$
@@ -50,45 +55,51 @@ $1$
 \vspace{3pt}
 \item $\frac{6}{25}$
 \end{enumerate}
+\end{multicols}
 \solution
 \input{exemplar/12/13/3/71/main.tex}
 \item If $P(A)=0.4$, $P(B)=0.8$ and $P(B|A)=0.6$, then $P(A \cup B)$ is equal to
+\begin{multicols}{4}
 \begin{enumerate}
 \item 0.24
 \item 0.3
 \item 0.48
 \item 0.96
 \end{enumerate}
+\end{multicols}
 \solution
 \input{exemplar/12/13/3/61/main.tex}
 \item If A and B are two events such that \pr{A} =$\frac{1}{2}$ \pr{B} =$\frac{1}{3}$, \pr{A|B}=$\frac{1}{4}$, then \pr{A' B'} equals
+\begin{multicols}{4}
 \begin{enumerate}
-\setlength{\itemsep}{1ex}
 	\item $\frac{1}{12}$
 	\item $\frac{3}{4}$
 	\item $\frac{1}{4}$
 	\item $\frac{3}{16}$	
 \end{enumerate}
+\end{multicols}
 \solution
 \input{exemplar/12/13/3/60/main.tex}
 \item If $A$ and $B$ are such events that $\pr{A} > 0$ and $\pr{B}\neq 1$, then $\pr{A^\prime|B^\prime}$ is
+\begin{multicols}{4}
 \begin{enumerate}
-\setlength{\itemsep}{1ex}
 \item $1-\pr{A|B}$
 \item $1-\pr{A^\prime|B}$
 \item $\frac{1-\pr{A+B}}{\pr{B^\prime}}$
 \item $\frac{\pr{A^\prime}}{\pr{B^\prime}}$
 \end{enumerate}
+\end{multicols}
 \solution
 \input{exemplar/12/13/3/68/main.tex}
 \item  Two events $E$ and $F$ are independent. If $\pr{E} = 0.3$, $\pr{E+F} = 0.5$, then $\pr{E|F}-\pr{F|E}$ equals
+\begin{multicols}{4}
 \begin{enumerate}
-\setlength{\itemsep}{1ex}
     \item $\frac{2}{7}$
     \item $\frac{3}{35}$
     \item $\frac{1}{70}$
     \item $\frac{1}{7}$
 \end{enumerate}
+\end{multicols}
 \solution
 \input{exemplar/12/13/3/73/main.tex}
 \item If A and B are two events such that $\pr{A|B}=p$, $\pr{A}=p$, $\pr{B}=\frac{1}{3}$ and $\pr{A+B}=\frac{5}{9}$, then $p=$\\
@@ -113,21 +124,23 @@ $1$
 \solution
 \input{exemplar/12/13/3/66/main.tex}
 \item
- If \pr{A|B} $>$ \pr{A}, then which of the following is correct :
+ If \pr{A|B} $>$ \pr{A}, then which of the following is correct? 
+\begin{multicols}{2}
 \begin{enumerate}
  \item  
  \label{12.13.6.18.A}
-$ \pr{B|A} < \pr{B}$\\
+$ \pr{B|A} < \pr{B}$
  \item 
   \label{12.13.6.18.B}
- $\pr{AB}< \pr{A}\pr{B}$\\
+ $\pr{AB}< \pr{A}\pr{B}$
  \item 
  \label{12.13.6.18.C}
- $\pr{B|A} > \pr{B}$\\
+ $\pr{B|A} > \pr{B}$
  \item 
   \label{12.13.6.18.D}
- $\pr{B|A} = \pr{B}$\\
+ $\pr{B|A} = \pr{B}$
  \end{enumerate}
+\end{multicols}
 \solution 
 \input{ncert/12/13/6/18/main1.tex}
 \item Let  $A$ and $B$ be independent events with $\pr{A} = 0.3$ and $\pr{B} = 0.4$. Find 
@@ -143,12 +156,14 @@ $ \pr{B|A} < \pr{B}$\\
 	\input{ncert/12/13/1/2/main.tex}
 	%
 	\item If A and B are two events such that $P(A) \neq 0$ and $P\brak{B\mid A} = 1$, then
+\begin{multicols}{4}
 \begin{enumerate}
-\item $A \subset B$\\
-\item $B\subset A$\\
-\item $B = \phi$\\
-\item $A = \phi$\\
+\item $A \subset B$
+\item $B\subset A$
+\item $B = \phi$
+\item $A = \phi$
 \end{enumerate}
+\end{multicols}
 		\solution
 		\input{ncert/12/13/6/17/main.tex}
 \item You are given that A and B are two events such that $\pr{B}=\frac{3}{5},\pr{A|B}=\frac{1}{2}$ and $\pr{A+B}=\frac{4}{5}$,then $\pr{A}$ equals\\
@@ -159,12 +174,13 @@ $ \pr{B|A} < \pr{B}$\\
 \input{exemplar/12/13/3/8/main.tex}
 %
 \item If A and B are two events and A $\ne \phi$, B $\ne \phi$, then
+\begin{multicols}{2}
 \begin{enumerate}
-\setlength{\itemsep}{1ex}
 	\item $\pr{A|B} = \pr{A}.\pr{B}$
 	\item $\pr{A|B} = \frac{\pr{A\cap B}}{\pr{B}}$
 	\item $\pr{A|B}\pr{B|A} = 1$
 	\item $\pr{A|B} = \frac{\pr{A}}{\pr{B}}$
 \end{enumerate}
+\end{multicols}
 \item You are given that A and B are two events such that \pr{B}=$\frac{3}{5}$ \pr{A  |  B}=$\frac{1}{2}$ \pr{A+B}=$\frac{4}{5}$ and \pr{A}=$\frac{1}{2}$.  \pr{B  |  A^\prime} is equal to
 \end{enumerate}
