--- a/axioms/word/axioms.tex
+++ b/axioms/word/axioms.tex
@@ -14,12 +14,16 @@ The probability that a person visiting a zoo will see the giraffe is 0.72, the p
 \input{exemplar/11/16/3/3/main.tex}
 \item If the probabilities for A to fail in an examination is 0.2 and that for B is 0.3, then
 the probability that either A or B fails is
+		\vspace{-3mm}
+\begin{multicols}{4}
 \begin{enumerate}
 \item $>0.5$
 \item 0.5
 \item $\le 0.5$
 \item 0
 \end{enumerate}
+\end{multicols}
+		\vspace{-3mm}
 \solution
 \input{exemplar/11/16/3/27/main.tex}
 \item It is given that in a group of 3 students, the probability of 2 students not having the same birthday is 0.992. What is the probability that the 2 students have the same birthday?
