Add existing files

--- a/axioms/boolean/axioms.tex
+++ b/axioms/boolean/axioms.tex
@@ -179,7 +179,9 @@ If $\pr{A}>0$ and $\pr{B}>0$, then $A$ and $B$ can be mutually exclusive and ind
 	\end{figure}
 \begin{table}[H]
 \centering
-\scriptsize
+%\scriptsize
+%\footnotesize
+%\small
 	\input{exemplar/11/16/3/11/tables/11.16.3.11.tex }
 \caption{}
 \label{tab:11/16/3/11}
