--- a/axioms/word/axioms.tex
+++ b/axioms/word/axioms.tex
@@ -12,8 +12,8 @@ The probability that a person visiting a zoo will see the giraffe is 0.72, the p
 \\
 \solution
 \input{exemplar/11/16/3/3/main.tex}
-\item If the probabilities for A to fail in an examination is 0.2 and that for B is 0.3, then
-the probability that either A or B fails is
+\item If the probabilities for $A$ to fail in an examination is 0.2 and that for $B$ is 0.3, then
+the probability that either $A$ or $B$ fails is
 		\vspace{-3mm}
 \begin{multicols}{4}
 \begin{enumerate}
@@ -31,7 +31,7 @@ the probability that either A or B fails is
 \solution
 \input{ncert/10/15/1/7/main.tex}
 %
-\item  In class XI of a school 40\% of the students study Mathematics and 30\% study Biology. 10\% of the class study both Mathematics and Biology. If a student is selected at random from the class,find the probability that he will be studying Mathematics or Biology
+\item  In class XI of a school, 40\% of the students study Mathematics and 30\% study Biology. 10\% of the class study both Mathematics and Biology. If a student is selected at random from the class,find the probability that he will be studying Mathematics or Biology
 	\\
 	\solution
 \input{ncert/11/16/3/18/axioms.tex}
@@ -68,17 +68,29 @@ $F$ : 'the card drawn is a king’
 $F$ : 'the card drawn is a queen or jack’
 \end{enumerate}
 \solution
-\input{ncert/12/13/2/15/main.tex}
-	\item A team of medical students doing their internship have to assist during surgeries
-at a city hospital. The probabilities of surgeries rated as very-complex, complex,
-routine, simple or very-simple are respectively, 0.15, 0.20, 0.31, 0.26, .08. Find
-the probabilities that a particular surgery will be rated
+See \tabref{tab:ncert/12/13/2/15}.
+\begin{table}[htb]\centering
+\input{ncert/12/13/2/15/tables/cards.tex}
+%	\input{exemplar/11/16/3/8/tables/table.tex}
+	\caption{}
+\label{tab:ncert/12/13/2/15}
+%	\label{tab:exemplar/11/16/3/8/table2}
+\end{table}	
+%\input{ncert/12/13/2/15/main.tex}
+	\item A team of medical students doing their internship have to assist during surgeries at a city hospital. The probabilities of surgeries rated as very-complex, complex, routine, simple or very-simple are respectively, 0.15, 0.20, 0.31, 0.26, .08. Find the probability that a particular surgery will be rated
+		\begin{multicols}{2}
 \begin{enumerate}
 \item complex or very-complex
 \item neither very-complex nor very simple
 \item routine or complex
 \item routine or simple
 \end{enumerate}
+\end{multicols}
 		\solution
 		\input{exemplar/11/16/3/8/main.tex}
+\begin{table}[htb]\centering
+	\input{exemplar/11/16/3/8/tables/table.tex}
+	\caption{}
+	\label{tab:exemplar/11/16/3/8/table2}
+\end{table}	
 \end{enumerate}
