--- a/exemplar/12/13/3/97/main.tex
+++ b/exemplar/12/13/3/97/main.tex
@@ -1,8 +1,8 @@
 The given condition can be expressed as
 \begin{align}
- \pr{AB}=\pr{A} \times \pr{B}
+	\pr{AB}&=\pr{A} \times \pr{B} =
  0
 	\\
-	\implies \pr{A} = 0 \text{or, } \pr{B} = 0,
+	\implies \pr{A} &= 0 \text{ or, } \pr{B} = 0,
  \end{align}
  which is not always true.
