--- a/ncert/11/16/3/18/axioms.tex
+++ b/ncert/11/16/3/18/axioms.tex
@@ -1,5 +1,5 @@
 	\begin{align}
-\because\pr{M} &= 0.4, \pr{B} =0.3 \pr{MB} = 0.1,\\
+\because\pr{M} &= 0.4, \pr{B} =0.3, \pr{MB} = 0.1,\\
 \pr{M+B} &= \pr{M}+\pr{B}-\pr{MB}
 	  =0.6
 \end{align}
