--- a/ncert/11/16/3/21/axioms.tex
+++ b/ncert/11/16/3/21/axioms.tex
@@ -8,12 +8,14 @@
 \begin{enumerate}
 	\item $\pr{A+B}=\frac{19}{30}$, from 
 \eqref{eq:axiom_sum_AB}.
-	\item
+	\item From
+	\eqref{eq:demorgan}
+	and the axioms of probability,
         \begin{align}
 \pr{A^\prime  B^\prime } =1-\pr{A+B}= \frac{11}{30}.
 \end{align}
-	\item
-    \begin{align}
+	\item     
+		\begin{align}
 	    \pr{A^\prime B}        &= \pr{B} - \pr{AB} = \frac{2}{15} 
     \end{align}
     from
