--- a/main.tex
+++ b/main.tex
@@ -88,6 +88,7 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{axioms/boolean/axioms.tex}
 \subsection{Applications}
 \input{axioms/word/axioms.tex}
+\newpage
 \subsection{Conditional Probability}
 \input{axioms/boolean/cond.tex}
 \subsection{Applications}
