Add existing files

--- a/exemplar/12/13/3/64/main.tex
+++ b/exemplar/12/13/3/64/main.tex
@@ -1,3 +1,4 @@
+From \eqref{eq:axiom-cond},
 \begin{align}
 	\pr{AB}&=\frac{3}{5}\times \frac{1}{2}
 =\frac{3}{10} 
@@ -7,3 +8,4 @@
 =\frac{1}{2}
 	\label{eq:exemplar/12/13/3/64}
 \end{align}
+from \eqref{eq:axiom_sum_AB}.
