--- a/exemplar/12/13/3/8/main.tex
+++ b/exemplar/12/13/3/8/main.tex
@@ -1,5 +1,6 @@
 \begin{enumerate}
 \item 
+From \eqref{eq:axiom-cond},
 \begin{align}
 \pr{C | B}
 =\frac{\frac{1}{4}}{\frac{1}{3}}
@@ -12,4 +13,5 @@
 &=1-\brak{\frac{2}{5}+\frac{1}{2}-\frac{1}{5}}
 =\frac{3}{10}
 \end{align}
+from \eqref{eq:axiom_sum_AB}.
 \end{enumerate}
