--- a/axioms/boolean/cond.tex
+++ b/axioms/boolean/cond.tex
@@ -144,11 +144,13 @@ $ \pr{B|A} < \pr{B}$
 \solution 
 \input{ncert/12/13/6/18/main1.tex}
 \item Let  $A$ and $B$ be independent events with $\pr{A} = 0.3$ and $\pr{B} = 0.4$. Find 
+\begin{multicols}{4}
 \begin{enumerate}
 \item \pr{AB} \item \pr{A+B}
 
 \item \pr{A|B} \item \pr{B|A}
 \end{enumerate}
+\end{multicols}
 \solution
 \input{ncert/12/13/2/8/main.tex}
 \item Compute $\pr{A|B}$, if $\pr{B} = 0.5$ and $\pr{AB} = 0.32$.\\
@@ -166,10 +168,12 @@ $ \pr{B|A} < \pr{B}$
 \end{multicols}
 		\solution
 		\input{ncert/12/13/6/17/main.tex}
-\item You are given that A and B are two events such that $\pr{B}=\frac{3}{5},\pr{A|B}=\frac{1}{2}$ and $\pr{A+B}=\frac{4}{5}$,then $\pr{A}$ equals\\
+\item You are given that A and B are two events such that $\pr{B}=\frac{3}{5},\pr{A|B}=\frac{1}{2}$ and $\pr{A+B}=\frac{4}{5}$, then $\pr{A}$ equals \rule{1cm}{0.1pt}.
+	\\
 \solution
 \input{exemplar/12/13/3/64/main.tex}
-\item Three events A, B and C have probabilities $\frac{2}{5}$,$\frac{1}{3}$ and $\frac{1}{2}$ respetively.Given that $\pr{AC}=\frac{1}{5}$ and $\pr{BC}=\frac{1}{4}$,find the values of $\pr{C | B}$ and $\pr{A^{\prime} C^{\prime}}$\\
+\item Three events $A, B$ and $C$ have probabilities $\frac{2}{5}$, $\frac{1}{3}$ and $\frac{1}{2}$ respetively. Given that $\pr{AC}=\frac{1}{5}$ and $\pr{BC}=\frac{1}{4}$, find the values of $\pr{C | B}$ and $\pr{A^{\prime} C^{\prime}}$.
+	\\
 \solution
 \input{exemplar/12/13/3/8/main.tex}
 %
@@ -182,5 +186,5 @@ $ \pr{B|A} < \pr{B}$
 	\item $\pr{A|B} = \frac{\pr{A}}{\pr{B}}$
 \end{enumerate}
 \end{multicols}
-\item You are given that A and B are two events such that \pr{B}=$\frac{3}{5}$ \pr{A  |  B}=$\frac{1}{2}$ \pr{A+B}=$\frac{4}{5}$ and \pr{A}=$\frac{1}{2}$.  \pr{B  |  A^\prime} is equal to
+\item You are given that $A$ and $B$ are two events such that $\pr{B}=\frac{3}{5}$, $\pr{A  |  B}=\frac{1}{2}$, $\pr{A+B}=\frac{4}{5}$ and $\pr{A}=\frac{1}{2}$.  $\pr{B  |  A^\prime}$ is equal to \rule{1cm}{0.1pt}.
 \end{enumerate}
