Add existing files

--- a/axioms/boolean/axioms.tex
+++ b/axioms/boolean/axioms.tex
@@ -277,4 +277,15 @@ Two independent events are always mutually exclusive.\\
 		\vspace{-3mm}
 \solution
 \input{exemplar/12/13/3/9/main.tex}
+\item 
+Match the following
+	in \tabref{tab:exemplar/11/16/3/43/tab}.
+\begin{table}[H]
+	\centering
+	\input{exemplar/11/16/3/43/tables/table.tex}
+	\caption{}
+	\label{tab:exemplar/11/16/3/43/tab}	
+\end{table}
+\solution
+\input{exemplar/11/16/3/43/main.tex}
 \end{enumerate}
