--- a/axioms/word/cond.tex
+++ b/axioms/word/cond.tex
@@ -1,9 +1,9 @@
 \begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
-	\item An electronic assembly consists of two subsystems,say A and B. From previous testing procedures, the following probabilities are assumed to be known
+	\item An electronic assembly consists of two subsystems, say $A$ and $B$. From previous testing procedures, the following probabilities are assumed to be known
 \begin{align}
-\pr{\text{A fails}}&=0.20
-\\ \pr{\text{B alone fails}}&=0.15
-\\ \pr{\text{A  and B fails}}&=0.15
+\pr{A\text{ fails}}&=0.20
+\\ \pr{B\text{ alone fails}}&=0.15
+	\\ \pr{A\text{ and }B \text{ fails}}&=0.15
 \end{align}
  Evaluate the following probabilities
  \begin{enumerate}
@@ -25,7 +25,7 @@ newspaper.
 \end{enumerate}
 \solution
 \input{ncert/12/13/2/16/main.tex}
-	\item Assume that the chances of a patient having a heart attack is $40\%$. It is also assumed that a meditation and yoga course reduce the risk of heart attack by $30\%$ and prescription of certain drug reduces its chances by $25\%$. At a time a patient can choose any one of the two options with equal probabilities. It is given that after going through one of the two options the patient selected at random suffers a heart attack. Find the probability that the patient followed a course of meditation and yoga?
+	\item Assume that the chances of a patient having a heart attack is $40\%$. It is also assumed that a meditation and yoga course reduce the risk of heart attack by $30\%$ and prescription of certain drug reduces its chances by $25\%$. At a time a patient can choose any one of the two options with equal probabilities. It is given that after going through one of the two options the patient selected at random suffers a heart attack. Find the probability that the patient followed a course of meditation and yoga.
 	\\
 		\solution
 		\input{ncert/12/13/6/13/main.tex}
@@ -33,15 +33,6 @@ newspaper.
 \\
 \solution 
 \input{exemplar/12/13/3/33/main.tex}
-\item 
-Match the following
-\begin{table}[!h]
-	\input{exemplar/11/16/3/43/tables/table.tex}
-	\caption{}
-	\label{tab:exemplar/11/16/3/43/tab}	
-\end{table}
-\solution
-\input{exemplar/11/16/3/43/main.tex}
 \item Two Coins are tossed once, where\\
 \brak{i} E : Tail appears on one coin,\qquad F : one coin shows head\\
 \brak{ii}  E : no tail appears,\qquad\qquad\qquad F : no head appears
