--- a/ncert/12/13/2/16/main.tex
+++ b/ncert/12/13/2/16/main.tex
@@ -1,10 +1,12 @@
-See \tabref{tab:variables-events}.  From the given information,
+%See \tabref{tab:variables-events}.
+From the given information,
 \begin{align}
 \pr{A}=\frac{6}{10},\
 \pr{B}=\frac{4}{10},\
 \pr{AB} 
 =\frac{2}{10}
 \end{align}
+\iffalse
 \begin{table}[htb] % h stands for "here", suggesting to LaTeX to place the table near where it's defined
 \centering
 \begin{tabular}{|c|c|}
@@ -19,6 +21,7 @@ B & English \\
 \caption{}
 \label{tab:variables-events}
 \end{table}
+\fi
 \begin{enumerate}
 \item
 \begin{align}
