--- a/ncert/12/13/6/13/main.tex
+++ b/ncert/12/13/6/13/main.tex
@@ -8,11 +8,11 @@ The given information is summarised in
 \end{table}
 %
 \begin{align}
-	\therefore	\pr{A|E_1} &= \pr{A}(1-(0.30))
+	\therefore	\pr{A|E_1} &= \pr{A}\cbrak{1-(0.30)}
 	 =  0.28
 	\label{eq:ncert/12/13/6/13/4}
 	\\
-	\pr{A|E_2} &= \pr{A}(1-(0.25))
+	\pr{A|E_2} &= \pr{A}\cbrak{1-(0.25)}
 	=  0.30
 	\label{eq:ncert/12/13/6/13/5}
 \end{align}
