--- a/ncert/12/13/6/15/main.tex
+++ b/ncert/12/13/6/15/main.tex
@@ -17,7 +17,7 @@ From
           0.15 +0.15 
 =0.30 
 \\
-	\pr{A^\prime|B ^\prime}&= 0.15/0.30 
+	\pr{A^\prime|B ^\prime}&= \frac{0.15}{0.30}
  = 0.50
 \end{align}
 \item 
