Add existing files

--- a/axioms/word/axioms.tex
+++ b/axioms/word/axioms.tex
@@ -93,4 +93,16 @@ See \tabref{tab:ncert/12/13/2/15}.
 	\caption{}
 	\label{tab:exemplar/11/16/3/8/table2}
 \end{table}	
+\item Without repetition of the numbers, four digit numbers are formed with the numbers 0,2,3,5. The
+probability of such a number divisible by 5 is
+		\begin{multicols}{4}
+\begin{enumerate}
+\item $\frac{1}{5}$ 
+\item $\frac{4}{5}$
+\item $\frac{1}{30}$ 
+\item $\frac{5}{9}$
+\end{enumerate}
+		\end{multicols}
+\solution
+\input{exemplar/11/16/3/22/main.tex}
 \end{enumerate}
