--- a/axioms/boolean/cond.tex
+++ b/axioms/boolean/cond.tex
@@ -187,4 +187,13 @@ $ \pr{B|A} < \pr{B}$
 \end{enumerate}
 \end{multicols}
 \item You are given that $A$ and $B$ are two events such that $\pr{B}=\frac{3}{5}$, $\pr{A  |  B}=\frac{1}{2}$, $\pr{A+B}=\frac{4}{5}$ and $\pr{A}=\frac{1}{2}$.  $\pr{B  |  A^\prime}$ is equal to \rule{1cm}{0.1pt}.
+\item A fair die is rolled. Consider events $E=1,3,5,\, F=2,3$ and $G=2,3,4,5$. Find
+\begin{enumerate}
+\item $\pr{E \mid F} \text{ and } \pr{F \mid E}$
+\item $\pr{E \mid G} \text{ and } \pr{G \mid E}$
+\item $\pr{{E \cup F} \mid G} \text{ and } \pr{{E \cap F} \mid G}$
+\end{enumerate}
+%
+\solution
+\input{ncert/12/13/1/11/main.tex}
 \end{enumerate}
