--- a/axioms/boolean/rand.tex
+++ b/axioms/boolean/rand.tex
@@ -38,4 +38,27 @@ variable. Give reasons for your answer.
 \input{ncert/12/13/2/5/main.tex}
 \item  A fair coin and an unbiased die are tossed. Let $A$ be the event 'head appears on the coin' and $B$ be the event '3 on the die'. Check whether $A$ and $B$ are independent events or not.
 		\label{ncert/12/13/2/4}
+\item A child's game has 8 triangles of which 3 are blue and rest are red, and 10 squares of which 6 are blue and rest are red. One piece is lost at random. Find the probability that it is a
+\begin{enumerate}
+\item triangle 
+\item square 
+\item square of blue colour 
+\item triangle of red colour           
+\end{enumerate}
+\solution
+\input{exemplar/10/13/3/37/assign3.tex}
+\item Suppose you have two coins which appear identical in your pocket. You know
+that one is fair and one is 2-headed. If you take one out, toss it and get a head,
+what is the probability that it was a fair coin?
+\\
+\input{exemplar/12/13/3/32/main.tex}
+\item A box has 5 blue and 4 red balls. One ball is drawn at random and not replaced. Its colour is also not noted. Then another ball is drawn at random. What is the probability of second ball being blue?
+	\\
+\solution
+\input{exemplar/12/13/3/18/main.tex}
+\item A bag contains 4 white and 5 black balls. Another bag contains 9 white and 7 black balls. A ball is transferred from the first bag to the second and then a ball is drawn at random from the second bag. Find the probability that the ball drawn is white.
+\item An item is manufactured by three machines A, B and C. Out of the total number of items manufactured during a specified period, $50\%$ are manufactured on A, $30\%$ on B and $20\%$ on C, $2\%$ of the items produced on A and $2\%$ of items produced on B are defective, and $3\%$ of these products produced on C are defective. All the items are stored at one godown. One item is drawn at random and is found to be defective. What is the probability that is was manufactured on machine A?
+\\
+\solution
+\input{exemplar/12/13/3/48/main.tex}
 \end{enumerate}
