--- a/axioms/word/cond.tex
+++ b/axioms/word/cond.tex
@@ -33,71 +33,26 @@ newspaper.
 \\
 \solution 
 \input{exemplar/12/13/3/33/main.tex}
-\item Two Coins are tossed once, where\\
-\brak{i} E : Tail appears on one coin,\qquad F : one coin shows head\\
-\brak{ii}  E : no tail appears,\qquad\qquad\qquad F : no head appears
-Determine \pr{E\mid F}.
-%\input{ncert/12/13/1/7a/ncertmain.tex}
-\item A fair die is rolled. Consider events $E=1,3,5,\, F=2,3$ and $G=2,3,4,5$. Find
-\begin{enumerate}
-\item $\pr{E \mid F} \text{ and } \pr{F \mid E}$
-\item $\pr{E \mid G} \text{ and } \pr{G \mid E}$
-\item $\pr{{E \cup F} \mid G} \text{ and } \pr{{E \cap F} \mid G}$
-\end{enumerate}
-%
-\solution
-%\input{ncert/12/13/1/11/main.tex}
-\item A child's game has 8 triangles of which 3 are blue and rest are red, and 10 squares of which 6 are blue and rest are red. One piece is lost at random. Find the probability that it is a
-\begin{enumerate}
-\item triangle 
-\item square 
-\item square of blue colour 
-\item triangle of red colour           
-\end{enumerate}
-\solution
-%\input{exemplar/10/13/3/37/assign3.tex}
 \item At a fete, cards bearing numbers 1 to 1000, one number on a card, are put in a box. Each player selects one card at random and that card is not replaced. If the selected card has a perfect square greater than 500, the player wins a prize. What is the probability that 
 \begin{enumerate}
 \item the first player wins a prize
 \item the second player wins a prize, if the first has won?
 \end{enumerate}
 \solution
-%\input{exemplar/10/13/3/42/main.tex}
-\item Without repetition of the numbers, four digit numbers are formed with the numbers 0,2,3,5.The
-probability of such a number divisible by 5 is
-\begin{enumerate}
-\item $\frac{1}{5}$ 
-\item $\frac{4}{5}$
-\item $\frac{1}{30}$ 
-\item $\frac{5}{9}$
-\end{enumerate}
+\input{exemplar/10/13/3/42/main.tex}
+\item Four cards are successively drawn without replaccement from a deck of 52 playing cards. What is the probability that all the four cards are kings?
+\\
 \solution
-%\input{exemplar/11/16/3/22/main.tex}
-\item Four cards are successively drawn without from a deck of 52 playing cards. What is the probability that all the four cards are kings?
+\input{exemplar/12/13/3/19/main.tex}
+\item Two natural numbers $r, s$ are drawn one at a time, without replacement from
+the set $S = {1,2,3, \ldots,n}$. Find $P[r\le p|s\le p]$.
 \\
-%\input{exemplar/12/13/3/19/assignment5.tex}
-\item Suppose you have two coins which appear identical in your pocket. You know
-that one is fair and one is 2-headed. If you take one out, toss it and get a head,
-what is the probability that it was a fair coin?
-\\
-%\input{exemplar/12/13/3/32/main.tex}
-\item A box has 5 blue and 4 red balls. One ball is drawn at random and not replaced. Its colour is also not noted. Then another ball is drawn at random. What is the probability of second ball being blue?
-\solution
-\\
-%\input{exemplar/12/13/3/18/main.tex}
-\item A bag contains 4 white and 5 black balls. Another bag contains 9 white and 7 black balls. A ball is transferred from the first bag to the second and then a ball is drawn at random from the second bag. Find the probability that the ball drawn is white.
-\\
-%\input{exemplar/12/13/3/16/main.tex}
-\item An item is manufactured by three machines A, B and C. Out of the total number of items manufactured during a specified period, $50\%$ are manufactured on A, $30\%$ on B and $20\%$ on C, $2\%$ of the items produced on A and $2\%$ of items produced on B are defective, and $3\%$ of these products produced on C are defective. All the items are stored at one godown. One item is drawn at random and is found to be defective. What is the probability that is was manufactured on machine A?
-\solution
-\\
-%\input{exemplar/12/13/3/48/main.tex}
-\item Two natural numbers r, s are drawn one at a time, without replacement from
-the set S = {1,2,3, \ldots,n}. Find P[$r\le p|s\le p$]
-%\input{exemplar/12/13/3/34/main2.tex}
+\solution 
+\input{exemplar/12/13/3/34/main.tex}
 \item There are two bags, one which contains 3 black balls and 4 white balls while the other contains 4 black balls and 3 white balls. A die is thrown. If it shows up 1 or 3, a ball is taken from the first bag; but it shown up any other number, a ball is taken from the second bag. Find the probability of choosing a black ball.
 \\
-%\input{exemplar/12/13/3/45/assignment6.tex}
+\solution
+\input{exemplar/12/13/3/45/main.tex}
 \item A shopkeeper sells three types of flower seeds A1, A2 and A3. They are sold as a mixture where the proportions are 4:4:2 respectively. The germination rates of the three types of seeds are 0.45, 0.60 and 0.35. Calculate the probability:
 \begin{enumerate}
 \item of a randomly chosen seed to germinate
