natural numbers r,s problem committed

--- a/exemplar/12/13/3/34/main.tex
+++ b/exemplar/12/13/3/34/main.tex
@@ -30,7 +30,7 @@ From \eqref{eq:12/13/3/34/3} and \eqref{eq:12/13/3/34/4}:
 &= 1 
 \end{align}
 \end{enumerate}
-\item  r is chosen first:
+\item  $r$ is chosen first:
 \begin{align}
 \pr{r\le p|s\le p} = \frac{\pr{r \le p, \, s \le p}}{\pr{s \le p}}
 \end{align}
